commit#12: resolve bottombar bug on small device

--- a/src/assets/layout/_bottombar.scss
+++ b/src/assets/layout/_bottombar.scss
@@ -1,7 +1,6 @@
 .layout-bottombar {
     position: fixed;
-    bottom: 0;
+    bottom: 1.25rem;
     width: 100%;
-    height: 6rem;
     padding: 0 1.25rem;
 }
